# growtopia-mongoose

./: .gitignore  CMakeLists.txt  README.md
cmake/: mingw-w64-toolchain.cmake
lib/libmicrohttpd-1.0.1-w32-bin/: readme.txt
lib/libmicrohttpd-1.0.1-w32-bin/x86/MinGW/shared-xp/mingw32/lib/: libmicrohttpd.la
lib/libmicrohttpd-1.0.1-w32-bin/x86/MinGW/static/mingw32/lib/: libmicrohttpd.la
lib/libmicrohttpd-1.0.1-w32-bin/x86/MinGW/static/mingw32/lib/pkgconfig/: libmicrohttpd.pc
lib/libmicrohttpd-1.0.1-w32-bin/x86/VS2017/Debug-dll-xp/: libmicrohttpd-dll_d.exp  libmicrohttpd-dll_d.ilk  libmicrohttpd-dll_d.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86/VS2017/Debug-static-xp/: libmicrohttpd_d.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86/VS2017/Release-dll-xp/: libmicrohttpd-dll.exp  libmicrohttpd-dll.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86/VS2017/Release-static-xp/: libmicrohttpd.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86/VS2019/Debug-dll/: libmicrohttpd-dll_d.exp  libmicrohttpd-dll_d.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86/VS2019/Debug-static/: libmicrohttpd_d.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86/VS2019/Release-dll/: libmicrohttpd-dll.exp  libmicrohttpd-dll.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86/VS2019/Release-static/: libmicrohttpd.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86/VS2022/Debug-dll/: libmicrohttpd-dll_d.exp  libmicrohttpd-dll_d.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86/VS2022/Debug-static/: libmicrohttpd_d.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86/VS2022/Release-dll/: libmicrohttpd-dll.exp  libmicrohttpd-dll.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86/VS2022/Release-static/: libmicrohttpd.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86_64/MinGW/shared/clang64/lib/: libmicrohttpd.la
lib/libmicrohttpd-1.0.1-w32-bin/x86_64/MinGW/shared/mingw64/lib/: libmicrohttpd.la
lib/libmicrohttpd-1.0.1-w32-bin/x86_64/MinGW/shared/ucrt64/lib/: libmicrohttpd.la
lib/libmicrohttpd-1.0.1-w32-bin/x86_64/MinGW/static/clang64/lib/: libmicrohttpd.la
lib/libmicrohttpd-1.0.1-w32-bin/x86_64/MinGW/static/clang64/lib/pkgconfig/: libmicrohttpd.pc
lib/libmicrohttpd-1.0.1-w32-bin/x86_64/MinGW/static/ucrt64/lib/: libmicrohttpd.la
lib/libmicrohttpd-1.0.1-w32-bin/x86_64/MinGW/static/ucrt64/lib/pkgconfig/: libmicrohttpd.pc
lib/libmicrohttpd-1.0.1-w32-bin/x86_64/VS2019/Debug-dll/: libmicrohttpd-dll_d.exp  libmicrohttpd-dll_d.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86_64/VS2019/Debug-static/: libmicrohttpd_d.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86_64/VS2019/Release-dll/: libmicrohttpd-dll.exp
lib/libmicrohttpd-1.0.1-w32-bin/x86_64/VS2019/Release-static/: libmicrohttpd.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86_64/VS2022/Debug-dll/: libmicrohttpd-dll_d.exp  libmicrohttpd-dll_d.lib
lib/libmicrohttpd-1.0.1-w32-bin/x86_64/VS2022/Release-dll/: libmicrohttpd-dll.exp
scripts/: build-windows.sh  build.bat  build.sh  generate-cert.bat  generate-cert.sh  setup-server.ps1  setup-server.sh  tune_highload.ps1  tune_highload.sh
src/: main.c  mongoose_config.h
